--- a/machineLearningSupervisado/ej1.ipynb
+++ b/machineLearningSupervisado/ej1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d1890e4a",
    "metadata": {},
    "outputs": [
@@ -10,12 +10,117 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cuaderno jupyter v2\n"
+      "   Nombre  Edad Sexo     Ciudad  Salario\n",
+      "0   Lucía    28    F     Madrid    32000\n",
+      "1  Carlos    35    M  Barcelona    45000\n",
+      "2   María    22    F   Valencia    29000\n",
+      "3   David    41    M    Sevilla    51000\n",
+      "4     Ana    30    F     Bilbao    38000\n"
      ]
     }
    ],
    "source": [
-    "print(\"Cuaderno jupyter v2\")"
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Datos en formato diccionario\n",
+    "datos = {\n",
+    "    \"Nombre\": [\"Lucía\", \"Carlos\", \"María\", \"David\", \"Ana\", \"Pepe\"],\n",
+    "    \"Edad\": [28, 35, 22, 41, 30, 18],\n",
+    "    \"Sexo\": [\"F\", \"M\", \"F\", \"M\", \"F\", \"M\"],\n",
+    "    \"Ciudad\": [\"Madrid\", \"Barcelona\", \"Valencia\", \"Sevilla\", \"Bilbao\", \"Badajoz\"],\n",
+    "    \"Salario\": [32000, 45000, 29000, 51000, 38000, 27000]\n",
+    "}\n",
+    "\n",
+    "# Crear DataFrame\n",
+    "df = pd.DataFrame(datos)\n",
+    "\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d84a903",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"datos.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a1e0a376",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Nombre  Edad Sexo    Ciudad  Salario\n",
+      "2   María    22    F  Valencia    29000\n",
+      "3   David    41    M   Sevilla    51000\n",
+      "4     Ana    30    F    Bilbao    38000\n",
+      "5    Pepe    18    M   Badajoz    27000\n",
+      "6  Javier    20    M    Murcia    50000\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"datos.csv\")\n",
+    "print(df.tail())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8ce4d39f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(7, 5)\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 7 entries, 0 to 6\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column   Non-Null Count  Dtype \n",
+      "---  ------   --------------  ----- \n",
+      " 0   Nombre   7 non-null      object\n",
+      " 1   Edad     7 non-null      int64 \n",
+      " 2   Sexo     7 non-null      object\n",
+      " 3   Ciudad   7 non-null      object\n",
+      " 4   Salario  7 non-null      int64 \n",
+      "dtypes: int64(2), object(3)\n",
+      "memory usage: 412.0+ bytes\n",
+      "None\n",
+      "Index(['Nombre', 'Edad', 'Sexo', 'Ciudad', 'Salario'], dtype='object')\n",
+      "            Edad       Salario\n",
+      "count   7.000000      7.000000\n",
+      "mean   27.714286  38857.142857\n",
+      "std     8.380817   9957.050625\n",
+      "min    18.000000  27000.000000\n",
+      "25%    21.000000  30500.000000\n",
+      "50%    28.000000  38000.000000\n",
+      "75%    32.500000  47500.000000\n",
+      "max    41.000000  51000.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Mostrar la forma del DataFrame\n",
+    "print(df.shape)\n",
+    "\n",
+    "# Mostrar información del DataFrame\n",
+    "print(df.info())\n",
+    "\n",
+    "# Mostrar columnas\n",
+    "print(df.columns)\n",
+    "\n",
+    "# Mostrar estadísticas descriptivas\n",
+    "print(df.describe())"
    ]
   }
  ],
